--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,11 +27,11 @@
     </div>
 <!--#2c72ab-->
 
-    <section id="MainHolder" style="width: 85%; margin: auto;background-color: white; border-radius: 25px; margin-top: 50px;box-shadow: 0px 0px 11px 0px white;">
+    <section id="MainHolder" style="width: 85%; margin: auto;background-color: white; border-radius: 25px; margin-top: 50px; padding-bottom: 40px;box-shadow: 0px 0px 11px 0px white;">
         <h1 style="margin: auto; text-align:center">CryptoScraper</h1>
         <hr>
 
-        <div style="height: 360px; padding-left: 20px;">
+        <div style="overflow: auto; padding-left: 20px; display: block;">
 <!--        HOME        -->
             <div class="tab-content" style="width:60%; padding-left: 40px; float: left;">
                 <div class="tab-pane fade show active" id="Home">
