added background image and changed css

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -51,6 +51,10 @@
                 <div class="tab-pane fade" id="Crypto">
                     <h4 class="mt-2">Crypto</h4>
                     <p>This is how you control your computers environment. It helps regulate temperature to keep your parts cool, and it also can determine how awesome your rig looks! There are different sizes to consider when buying a case; full tower is big, mid-tower is mid sized, and mini is small.</p>
+                    <p>This is how you control your computers environment. It helps regulate temperature to keep your parts cool, and it also can determine how awesome your rig looks! There are different sizes to consider when buying a case; full tower is big, mid-tower is mid sized, and mini is small.</p>
+                    <p>This is how you control your computers environment. It helps regulate temperature to keep your parts cool, and it also can determine how awesome your rig looks! There are different sizes to consider when buying a case; full tower is big, mid-tower is mid sized, and mini is small.</p>
+                    <p>This is how you control your computers environment. It helps regulate temperature to keep your parts cool, and it also can determine how awesome your rig looks! There are different sizes to consider when buying a case; full tower is big, mid-tower is mid sized, and mini is small.</p>
+
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="option" id="optionB" value="A">
                         <label class="form-check-label" for="optionA">
