--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -7,7 +7,10 @@ html{
 }
 
 body{
-    background-color: black;
+    background-image: url("images/background.jpg");
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .nav-pills .nav-link{
