--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,6 +29,10 @@
 
     <section id="MainHolder" style="width: 85%; margin: auto;background-color: white; border-radius: 25px; margin-top: 50px; padding-bottom: 40px;box-shadow: 0px 0px 9px 0px white;">
         <h1 style="margin: auto; text-align:center">CryptoScraper</h1>
+        <a><i class="fas fa-sign-in-alt"></i></a>
+        <a><i class="fas fa-sign-out-alt"></i></a>
+
+
         <hr>
 
         <div style="overflow: auto; padding-left: 20px; display: block;">
@@ -50,10 +54,33 @@
 <!--        Crypto            -->
                 <div class="tab-pane fade" id="Crypto">
                     <h4 class="mt-2">Crypto</h4>
-                    <p>This is how you control your computers environment. It helps regulate temperature to keep your parts cool, and it also can determine how awesome your rig looks! There are different sizes to consider when buying a case; full tower is big, mid-tower is mid sized, and mini is small.</p>
-                    <p>This is how you control your computers environment. It helps regulate temperature to keep your parts cool, and it also can determine how awesome your rig looks! There are different sizes to consider when buying a case; full tower is big, mid-tower is mid sized, and mini is small.</p>
-                    <p>This is how you control your computers environment. It helps regulate temperature to keep your parts cool, and it also can determine how awesome your rig looks! There are different sizes to consider when buying a case; full tower is big, mid-tower is mid sized, and mini is small.</p>
-                    <p>This is how you control your computers environment. It helps regulate temperature to keep your parts cool, and it also can determine how awesome your rig looks! There are different sizes to consider when buying a case; full tower is big, mid-tower is mid sized, and mini is small.</p>
+                    <div id="container">
+                    <!--           th:each : make a row foreach item             -->
+                        <div id="row">
+                            <ul>
+                                <li>CryptoName | </li>
+                                <li>$ per hr | </li>
+                                <li>Total crypto in trade | </li>
+                                <li>$ per day</li>
+                            </ul>
+                        </div>
+                        <div id="row2">
+                            <ul>
+                                <li>CryptoName | </li>
+                                <li>$ per hr | </li>
+                                <li>Total crypto in trade | </li>
+                                <li>$ per day</li>
+                            </ul>
+                        </div>
+                        <div id="row3">
+                            <ul>
+                                <li>CryptoName | </li>
+                                <li>$ per hr | </li>
+                                <li>Total crypto in trade | </li>
+                                <li>$ per day</li>
+                            </ul>
+                        </div>
+                    </div>
 
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="option" id="optionB" value="A">
